# adrenaline

./: .env.development  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  build.sh  docker-compose.dev-app.yml  docker-compose.dev.yml  docker-compose.yml
adrenaline/: Dockerfile.dev  pyproject.toml
adrenaline/api/: main.py
adrenaline/api/ner/: data.py
adrenaline/api/pages/: data.py
adrenaline/api/patients/: answer.py  cot.py  data.py  db.py  ehr.py  llm.py  prompts.py  rag.py  workflows.py
adrenaline/api/routes/: answer.py  ner.py  pages.py  patients.py
adrenaline/api/users/: auth.py
backend/: Dockerfile.dev  README.md  instruction_tune_dataset.ipynb  openbiollm-llama3-8b.py  pyproject.toml
backend/api/: main.py  routes.py
backend/api/notes/: data.py  db.py
backend/api/patients/: data.py  ehr.py
backend/clinical_llm_service/: README.md  pyproject.toml
backend/clinical_llm_service/api/: main.py
backend/clinical_ner_service/: pyproject.toml
backend/clinical_ner_service/api/: main.py  routes.py
backend/clinical_ner_service/api/entities/: data.py
backend/services/clinical_ner_service/: Dockerfile.dev
backend/services/clinical_ner_service/api/: routes.py
backend/services/embedding_service/: Dockerfile.dev
backend/services/embedding_service/api/: main.py  routes.py
backend/services/embedding_service/api/embeddings/: data.py
frontend/: package-lock.json  package.json
frontend/src/app/components/: clinical-notes-card.tsx  clinical-notes-table.tsx  entity-viz.tsx  events-table.tsx  patient-card.tsx  patient-table.tsx  qapairs-table.tsx  search-bar.tsx  sidebar.tsx  stat-card.tsx
frontend/src/app/design/: page.tsx
frontend/src/app/dev/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/types/: note.ts  patient.ts
scripts/: cot_endpoint.py  create_instruction_answers.py  fetch_pmc.py  load_ehrnoteqa.py  load_embeddings.py  load_entities.py  load_mimic_data.py  load_mimiciv.py  load_mimiciv_fhir.py  load_note_embeddings.py  load_notes.py  load_umls.py  load_umls_embeddings.py  print_umls_stats.py  test_cot_generate.py  test_cot_validation.py  test_gatortron.py  test_openbiollm.py
services/: .env.development  docker-compose.dev-services.yml  docker-compose.dev_cpu-services.yml  docker-compose.dev_gpu-services.yml  hapi.application.yaml
services/clinical_ner/: pyproject.toml
services/clinical_ner/api/: main.py
services/embedding/: pyproject.toml
services/embedding/api/: main.py  routes.py
services/embedding/api/embeddings/: data.py
ui/: package-lock.json  package.json
ui/src/app/: layout.tsx
ui/src/app/components/: answer-card.tsx  clinical-notes-table.tsx  entity-viz.tsx  (+11 more)
(+11 files in other folders)
