[tool.poetry]
name = "adrenaline-clinical-llm-service"
version = "0.1.0"
description = "A helpful clinical AI assistant"
authors = ["Vector Institute <ai_engineering@vectorinstitute.ai>"]
repository = "https://github.com/VectorInstitute/adrenaline"
license = "Apache-2.0"
packages = [
    { include = "api/" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
transformers = "^4.44.0"
torch = "^2.4.0"
accelerate = "^0.33.0"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
