[tool.poetry]
name = "adrenaline-clinical-ner-service"
version = "0.1.0"
description = "A named entity recognition model"
authors = ["Vector Institute <ai_engineering@vectorinstitute.ai>"]
repository = "https://github.com/VectorInstitute/adrenaline"
license = "Apache-2.0"
packages = [
    { include = "api/" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
medcat = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
